force-app/main/default/objects/Asset/fields/PaintJobs__c.field-meta.xml
<CustomField>
    <fullName>PaintJobs__c</fullName>
    <defaultValue>0</defaultValue>
    <label>No. of Paint Jobs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>