force-app/main/default/objects/Asset/fields/WorkLog__c.field-meta.xml
<CustomField>
    <fullName>WorkLog__c</fullName>
    <label>Work Log</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>