force-app/main/default/objects/Asset/validationRules/Paintjob_must_not_be_blue.validationRule-meta.xml
<ValidationRule>
    <fullName>Paintjob_must_not_be_blue</fullName>
    <active>true</active>
    <description>I really don&#39;t like the Rolling Stones, therefore the door must never be painted black!</description>
    <errorConditionFormula>Color__c = &quot;Process Black&quot;</errorConditionFormula>
    <errorDisplayField>Color__c</errorDisplayField>
    <errorMessage>The paint job must never be done in blue!</errorMessage>
</ValidationRule>